tests/spec/lex/snapshots/comment_adjacent.snap
---
source: tests/spec/lex/mod.rs
description: |-
  // first line
  // second line
---
LexResult {
    tokens: [
        Token {
            kind: Comment,
            text: "// first line",
            byte_offset: 0,
            byte_length: 13,
        },
        Token {
            kind: Comment,
            text: "// second line",
            byte_offset: 14,
            byte_length: 14,
        },
        Token {
            kind: EOF,
            text: "",
            byte_offset: 28,
            byte_length: 0,
        },
    ],
    errors: [],
    blank_lines: [],
}
