tests/spec/lex/snapshots/comment_consecutive.snap
---
source: tests/spec/lex/mod.rs
description: |-
  42;
  // first comment
  84;
  // second comment
---
LexResult {
    tokens: [
        Token {
            kind: Integer,
            text: "42",
            byte_offset: 0,
            byte_length: 2,
        },
        Token {
            kind: Semicolon,
            text: ";",
            byte_offset: 2,
            byte_length: 1,
        },
        Token {
            kind: Comment,
            text: "// first comment",
            byte_offset: 4,
            byte_length: 16,
        },
        Token {
            kind: Integer,
            text: "84",
            byte_offset: 21,
            byte_length: 2,
        },
        Token {
            kind: Semicolon,
            text: ";",
            byte_offset: 23,
            byte_length: 1,
        },
        Token {
            kind: Comment,
            text: "// second comment",
            byte_offset: 25,
            byte_length: 17,
        },
        Token {
            kind: EOF,
            text: "",
            byte_offset: 42,
            byte_length: 0,
        },
    ],
    errors: [],
    blank_lines: [],
}
