tests/spec/lex/snapshots/comment_only.snap
---
source: tests/spec/lex/mod.rs
description: // This is just a comment
---
LexResult {
    tokens: [
        Token {
            kind: Comment,
            text: "// This is just a comment",
            byte_offset: 0,
            byte_length: 25,
        },
        Token {
            kind: EOF,
            text: "",
            byte_offset: 25,
            byte_length: 0,
        },
    ],
    errors: [],
    blank_lines: [],
}
