tests/spec/lex/snapshots/comment_with_keywords.snap
---
source: tests/spec/lex/mod.rs
description: // if else while true false 42
---
LexResult {
    tokens: [
        Token {
            kind: Comment,
            text: "// if else while true false 42",
            byte_offset: 0,
            byte_length: 30,
        },
        Token {
            kind: EOF,
            text: "",
            byte_offset: 30,
            byte_length: 0,
        },
    ],
    errors: [],
    blank_lines: [],
}
