tests/spec/lex/snapshots/comment_with_slashes.snap
---
source: tests/spec/lex/mod.rs
description: // comment with // multiple slashes
---
LexResult {
    tokens: [
        Token {
            kind: Comment,
            text: "// comment with // multiple slashes",
            byte_offset: 0,
            byte_length: 35,
        },
        Token {
            kind: EOF,
            text: "",
            byte_offset: 35,
            byte_length: 0,
        },
    ],
    errors: [],
    blank_lines: [],
}
