tests/spec/lex/snapshots/comment_with_symbols.snap
---
source: tests/spec/lex/mod.rs
description: "// comment with symbols: !@#$%^&*()_+-=[]{}|;:'\",.<>/?"
---
LexResult {
    tokens: [
        Token {
            kind: Comment,
            text: "// comment with symbols: !@#$%^&*()_+-=[]{}|;:'\",.<>/?",
            byte_offset: 0,
            byte_length: 54,
        },
        Token {
            kind: EOF,
            text: "",
            byte_offset: 54,
            byte_length: 0,
        },
    ],
    errors: [],
    blank_lines: [],
}
