tests/spec/lex/snapshots/doc_comment.snap
---
source: tests/spec/lex/mod.rs
description: /// This is a doc comment
---
LexResult {
    tokens: [
        Token {
            kind: DocComment,
            text: "This is a doc comment",
            byte_offset: 0,
            byte_length: 25,
        },
        Token {
            kind: EOF,
            text: "",
            byte_offset: 25,
            byte_length: 0,
        },
    ],
    errors: [],
    blank_lines: [],
}
